--- a/giftCards.html
+++ b/giftCards.html
@@ -51,7 +51,7 @@
             <button id="bestill">order</button>
         </div>
     </article>
-
+ <script src="script.js"></script>
 </body>
 
 </html>
